fix flickering on android chrome

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -24,7 +24,7 @@ $color-banner-background: light-dark(rgb(90 90 90), rgb(25 25 25));
 $color-scrollbar-track: $color-content;
 $color-scrollbar-thumb: $color-banner-background;
 $color-outline: light-dark(rgb(100 100 100 / 40%), rgb(200 200 200 / 20%));
-$filter-face-no-focus: brightness(80%);
+$filter-face-no-focus: brightness(50%);
 $color-shadow: rgb(51 51 51 / 50%);
 $color-iso: $color-background;
 $color-iso-top: $color-iso;
@@ -179,14 +179,6 @@ $icon-size-social: 18px;
     transition: all 200ms ease-in-out;
 }
 
-%transition-shadow {
-    transition: filter 500ms ease-in-out;
-}
-
-%transition-cube {
-    transition: transform 500ms linear;
-}
-
 %threed-side {
     content: '';
     display: inline-block;
@@ -289,12 +281,17 @@ main {
     background-clip: text;
     color: transparent;
     background-size: 300% 100%;
+}
+
+%gradient-animation {
     animation: heading-gradient-animation 15s linear infinite;
     animation-direction: alternate;
+    animation-delay: 0s;
 }
 
 .text-gradient {
     @extend %gradient-background;
+    @extend %gradient-animation;
 }
 
 h1 {
@@ -546,6 +543,7 @@ nav {
     &.hover:focus {
         > .site-title {
             @extend %gradient-background;
+            @extend %gradient-animation;
         }
     }
 }
@@ -938,6 +936,7 @@ ul.social {
     overflow-y: auto;
     scroll-behavior: smooth;
     scrollbar-width: auto;
+    scroll-margin: 0;
 
     &::-webkit-scrollbar-track {
         background: $color-scrollbar-track;
@@ -1073,6 +1072,7 @@ ul.social {
 .content-cube {
     position: relative;
     transform-style: preserve-3d;
+    backface-visibility: hidden;
 
     &.rotate {
         &-0 {
@@ -1093,16 +1093,18 @@ ul.social {
     }
 
     > .face {
-        z-index: 1;
         width: 100%;
         height: 100%;
         position: absolute;
         transform-style: preserve-3d;
-        will-change: transform;
-        transition-property: transform;
+        will-change: transform, filter;
+        transition-property: transform, filter;
+        transition-timing-function: ease-in-out;
+        transition-duration: 500ms;
         outline-offset: 0;
+        background-color: $color-content;
+        filter: $filter-face-no-focus;
 
-        @extend %transition-cube;
         @extend %outline-dashed;
 
         &.face-top {
@@ -1116,12 +1118,17 @@ ul.social {
             height: inherit;
             padding: 0 10%;
             box-sizing: border-box;
-            background-color: $color-content;
-            filter: $filter-face-no-focus;
             pointer-events: none;
-            transform-style: flat;
+            visibility: hidden;
+            transition: visibility 1s;
+            transition-behavior: allow-discrete;
+            will-change: visibility;
+            contain-intrinsic-size: none;
+            content-visibility: visible;
 
-            @extend %transition-shadow;
+            .title-section > h1 {
+                @extend %gradient-background;
+            }
 
             .title-section > h2 {
                 font-size: $h1-size;
@@ -1183,14 +1190,19 @@ ul.social {
         }
 
         &.focus {
-            z-index: 99;
+            filter: none;
 
             > .face-content {
                 transform: translateZ(0);
-                filter: none;
                 pointer-events: auto;
+                visibility: visible;
 
                 @extend %scrollable;
+
+                .title-section > h1 {
+                    // Only enable animation when in focus
+                    @extend %gradient-animation;
+                }
             }
         }
     }
